<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/layout_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/allTextInputOfLayoutBlack">

        <TextView
            android:id="@+id/title_alert"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="@dimen/margin_20"
            android:layout_marginEnd="20dp"
            android:text="@string/txt_rmesh_reward_title"
            android:textColor="@color/colorSemiDeepBlue"
            android:textSize="@dimen/text_size_20"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/body_alert"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:text="@string/txt_rmesh_reward_message"
            android:textColor="@color/body_text"
            android:textSize="@dimen/text_size_16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title_alert" />

        <CheckBox
            android:id="@+id/switch_dont_show"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/txt_do_not_show"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/body_alert" />

        <TextView
            android:id="@+id/do_not_show_message"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:text="@string/txt_do_not_show_messahe"
            android:textColor="@color/colorClickHere"
            android:textSize="@dimen/text_size_16"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/switch_dont_show" />


        <TextView
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="20dp"
            android:paddingStart="@dimen/padding_20"
            android:paddingTop="@dimen/padding_5"
            android:paddingEnd="@dimen/padding_20"
            android:paddingBottom="@dimen/padding_5"
            android:text="@string/later"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn_ok"
            app:layout_constraintTop_toBottomOf="@+id/do_not_show_message" />
        <TextView
            android:id="@+id/btn_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:paddingStart="@dimen/padding_20"
            android:paddingTop="@dimen/padding_5"
            android:paddingEnd="@dimen/padding_20"
            android:paddingBottom="@dimen/padding_5"
            android:text="@string/txt_claim_now"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/btn_cancel" />

    </android.support.constraint.ConstraintLayout>
</layout>